# Pixel_ResShift

./: .gitignore  README.md  __init__.py  compat.py  config.py  data.py  dit.py  mean_flow.py  optimizer.py  pyproject.toml  train.py
examples/: export_degradation_grid.py  run_b16_epoch_when_imagenet_ready.sh  smoke_b16_cpu_server.yaml  smoke_b16_ddp_server.yaml  smoke_b16_server.yaml  switch_b16_to_4gpu_after_60000.sh  switch_p3_100000_to_p4_bs8.sh  train_b16_10000_ddp_bs8_rsnoise_server_4gpu.yaml  train_b16_2000_ddp_bs8_rsnoise_server_4gpu.yaml  train_b16_2000_server.yaml  train_b16_20epochs_ddp_bs8_rsnoise_server_4gpu.yaml  train_b16_epoch_ddp_bs12_rsnoise_server.yaml  train_b16_epoch_ddp_bs12_rsnoise_server_2gpu_from60000.yaml  train_b16_epoch_ddp_bs12_rsnoise_server_4gpu_from60000.yaml  train_b16_epoch_ddp_bs16_rsnoise_server.yaml  train_b16_epoch_ddp_bs4_rsnoise_server.yaml  train_b16_epoch_ddp_bs8_rsnoise_server.yaml  train_b16_epoch_imagenet_server.yaml  train_h16_2000_ddp_server.yaml  train_h16_2000_server.yaml  train_l16_2000_server.yaml
pMF_torch/: .gitignore  README.md  main.py  pmf.py  train.py
pMF_torch/configs/: default.py  pMF_B_16_config.yml
pMF_torch/models/: convnext.py  embedder.py  pmfDiT.py  torch_models.py
pMF_torch/scripts/: eval.sh  install.sh  prepare_imagenet.py  train.sh
pMF_torch/tools/: convert_jax_pmf_to_torch.py  eval_corrected_pytorch_fid.py
pMF_torch/utils/: auxloss_util.py  ckpt_util.py  data_util.py  ema_util.py  fid_util.py  input_pipeline.py  (+7 more)
pixel_resshift/: __init__.py  config.py  data.py  dit.py  mean_flow.py  train.py
(+13 files in other folders)
